<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/shadow"
    android:stretchColumns="0"
    tools:context=".PeerFragment">

    <TableRow
        android:layout_width="206dp"
        android:layout_height="73dp"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/peer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center|top|center_vertical|fill_vertical"
            android:text="@string/peer_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/peer_rssi"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal|top|center_vertical|fill_vertical"
            android:text="@string/peer_rssi"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/peer_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_span="2"
            android:text="@string/peer_address" />
    </TableRow>

</TableLayout>